# scEGOT

./: .buildinfo  .gitattributes  .gitignore  LICENSE.txt  README.html  README.md  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scegot-0.1.0-py3-none-any.whl  scegot.html  search.html  searchindex.js  test.ipynb
.doctrees/: README.doctree  index.doctree  modules.doctree  scegot.doctree
.github/workflows/: deploy.yml  gh-pages.yml  main.yml
_sources/: README.md.txt  index.rst.txt
compare/: compare_time.ipynb  create_dataset_trajectorynet.ipynb  create_dataset_wot.ipynb  silhouette_score.ipynb
compare/Beeline/outputs/example/: GSD-AUPRC.csv  GSD-AUROC.csv  GSD-EPr-Activation.csv  GSD-EPr-Inhibitory.csv  GSD-EPr.csv  GSD-Times.csv
compare/Beeline/outputs/example/GSD/LEAP/: outFile0.txt  outFile1.txt  rankedEdges.csv  time0.txt  time1.txt
compare/Beeline/outputs/example/GSD/PIDC/: outFile.txt  rankedEdges.csv  time.txt
compare/Beeline/outputs/example/GSD/PPCOR/: rankedEdges.csv  time.txt
compare/Beeline/outputs/example/GSD/SCEGOT/: rankedEdges.csv  time.txt
compare/Beeline/outputs/example/GSD/SCODE/: outFile0.csv  outFile1.csv  rankedEdges.csv  time0.txt  time1.txt
compare/Beeline/outputs/example/GSD/SCODE/0/: meanA.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_1/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_2/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_3/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_4/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_5/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/0/out_6/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/: meanA.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_1/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_2/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_3/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_4/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_5/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCODE/1/out_6/: A.txt  B.txt  RSS.txt  W.txt
compare/Beeline/outputs/example/GSD/SCRIBE/: outFile0.csv  outFile1.csv  rankedEdges.csv  time0.txt  time1.txt
compare/Beeline/outputs/example/GSD/SINCERITIES/: rankedEdges.csv  time0.txt  time1.txt
compare/cytotrace2/: cytotrace2_results.txt
scEGOT/: __init__.py  scegot.py
scegot/: __init__.py  data_download.ipynb  scegot.py
scegot/dataset/: TFgenes_name.csv
scegot/figure_code/: scEGOT_Figures.ipynb  scEGOT_Figures_ATAC.ipynb
scegot/sphinx/docs/: README.html  index.html  objects.inv  searchindex.js
scegot/sphinx/source/: conf.py  index.rst
sphinx/docs/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  scegot.html  search.html  searchindex.js
sphinx/docs/.doctrees/: README.doctree  environment.pickle  index.doctree  modules.doctree  scegot.doctree
sphinx/docs/.doctrees/references/: README.doctree
sphinx/docs/_sources/: README.md.txt  modules.rst.txt
sphinx/docs/references/: README.html
sphinx/source/: README.md  conf.py  index.rst  scegot.rst
sphinx/source/reference/: index.rst  scegot.rst
