[tool.poetry]
name = "scegot"
version = "0.1.0"
description = "single cell trajectory inference framework based on Entropic Gaussian mixture Optimal Transport"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "scegot/*.py"}]

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"
umap-learn = "^0.5.3"
seaborn = "^0.12.2"
natsort = "^8.4.0"
POT = "^0.9.0"
networkx = "^3.1"
plotly = "^5.15.0"
ipython = "^8.14.0"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
scvelo = "^0.2.5"
anndata = "0.8"
kaleido = "0.2.1"
cellmap = "^1.0.2"
tqdm = "^4.65.0"
jupyterlab = "^4.0.4"
screcode = "0.2.1"
llvmlite = "^0.40.1"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.4"
jupyter-git = "^1.0.22"
jupyter-black = "^0.3.3"
nbdime = "^3.1.1"
nbresuse = "^0.4.0"
jupyter-kite = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
