[tool.poetry]
name = "scegot"
version = "0.1.3"
description = "single cell trajectory inference framework based on Entropic Gaussian mixture Optimal Transport"
authors = ["Toshiaki Yachimura <toshiaki.yachimura.a4@tohoku.ac.jp>"]
readme = "README.md"
packages = [{include = "scegot/*.py"}]
license = "MIT"
homepage = "https://yachimura-lab.github.io/scEGOT/"
repository = "https://github.com/yachimura-lab/scEGOT"
documentation = "https://yachimura-lab.github.io/scEGOT/tutorial.html"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
scipy = "^1.11.1"
scikit-learn = "^1.3.0"
matplotlib = "<3.8.0"
umap-learn = "^0.5.3"
seaborn = "^0.12.2"
natsort = "^8.4.0"
POT = "^0.9.0"
networkx = "^3.1"
plotly = "^5.15.0"
ipython = "^8.14.0"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
scvelo = "^0.2.5"
anndata = "0.8"
kaleido = "0.2.1"
cellmap = "^1.0.2"
tqdm = "^4.65.0"
jupyterlab = "^4.0.4"
screcode = "0.2.2"
llvmlite = "^0.40.1"
pandas = "^2.0.3"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.0.4"
jupyter-git = "^1.0.22"
jupyter-black = "^0.3.3"
nbdime = "^3.1.1"
nbresuse = "^0.4.0"
jupyter-kite = "^2.0.2"
sphinx = "^7.1.2"
nbsphinx = "^0.9.2"
sphinx-rtd-theme = "^1.2.2"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
