[tool.poetry]
name = "scegot"
version = "0.2.3"
description = "single cell trajectory inference framework based on Entropic Gaussian mixture Optimal Transport"
authors = ["Toshiaki Yachimura <toshiaki.yachimura.a4@tohoku.ac.jp>"]
readme = "README.md"
packages = [{include = "scegot/*.py"}]
license = "MIT"
homepage = "https://yachimura-lab.github.io/scEGOT/"
repository = "https://github.com/yachimura-lab/scEGOT"
documentation = "https://yachimura-lab.github.io/scEGOT/tutorial.html"

[tool.poetry.dependencies]
python = "<3.12,>=3.9"
scipy = "<1.14,>=1.11.4"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.0"
umap-learn = "^0.5.5"
seaborn = "^0.13.1"
natsort = "^8.4.0"
POT = "^0.9.3"
networkx = "^3.2.1"
plotly = "^5.18.0"
pydotplus = "^2.0.2"
graphviz = "^0.20.1"
anndata = "^0.8"
kaleido = "0.2.1"
cellmap = "^1.0.7"
tqdm = "^4.66.1"
screcode = "^0.2.5"
llvmlite = "^0.41.1"
pandas = "^2.2.0"
numpy = "^1.26.3"
pyarrow = "^15.0.0"

[tool.poetry.group.dev.dependencies]
ipywidgets = "^8.1.1"
jupyter-black = "^0.3.4"
jupyter-kite = "^2.0.2"
jupyterlab = "^4.0.9"
ipython = "^8.18.1"

[tool.poetry.group.ghpages.dependencies]
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
nbsphinx = "^0.9.3"
myst-parser = "^2.0.0"
sphinx-autobuild = "^2021.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
